--- a/k8s/clientDep.yml
+++ b/k8s/clientDep.yml
@@ -1,14 +1,19 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: backend-mi1
-  labels:
-    type: testing
-    mode: server
+  name: fst-deployment-services
 spec:
-  containers:
-    - name: backend-contianer
-      image: subhanali/microservices:latest
-      ports:
-        - containerPort: 5000
-          hostPort: 5001
+  replicas: 4
+  selector:
+    matchLabels:
+      type: test-app
+  template:
+    metadata:
+      labels:
+        type: test-app
+    spec:
+      containers:
+        - name: my-container
+          image: subhanali/microservices
+          ports:
+            - containerPort: 5000
